# oca-mdns-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  LICENSE  Makefile  README.md
macos-menu/: LaunchAgent.template.plist  README.md
macos-menu/Assets.xcassets/MenubarRunning.imageset/: Contents.json
macos-menu/Assets.xcassets/MenubarStopped.imageset/: Contents.json
macos-menu/MdnsGatewayMenu/: AppDelegate.swift  GatewayProcessController.swift  GatewaySettings.swift  Info.plist  LaunchAtLogin.swift  MdnsGatewayMenuApp.swift  PreferencesView.swift  PreferencesWindowController.swift  StatusMenuController.swift
macos-menu/MdnsGatewayMenu.xcodeproj/: project.pbxproj
macos-menu/MdnsGatewayMenu.xcodeproj/project.xcworkspace/xcuserdata/matthardy.xcuserdatad/: UserInterfaceState.xcuserstate
macos-menu/MdnsGatewayMenu.xcodeproj/xcuserdata/matthardy.xcuserdatad/xcschemes/: xcschememanagement.plist
macos-menu/OCA mDNS Gateway.xcodeproj/: project.pbxproj
macos-menu/OCA mDNS Gateway.xcodeproj/project.xcworkspace/xcuserdata/matthardy.xcuserdatad/: UserInterfaceState.xcuserstate
macos-menu/OCA mDNS Gateway.xcodeproj/xcshareddata/xcschemes/: OCA mDNS Gateway.xcscheme
macos-menu/OCA mDNS Gateway.xcodeproj/xcuserdata/matthardy.xcuserdatad/xcschemes/: xcschememanagement.plist
macos-menu/OCA-mDNS-Gateway/: AppDelegate.swift  GatewayProcessController.swift  GatewaySettings.swift  Info.plist  LaunchAtLogin.swift  OCAMDNSGatewayApp.swift  PreferencesView.swift  PreferencesWindowController.swift  StatusMenuController.swift  entitlements.plist
macos-menu/release/: OCA-mDNS-Gateway.dmg
src/: discovery.cpp  discovery.hpp  http_api.cpp  http_api.hpp  main.cpp  util.cpp  util.hpp
